--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,10 @@ add_message_files(
   RaspiCarWheelControl.msg
 )
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  RaspiCarMotorControl.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
